--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,19 @@ description = ""
 authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]
 readme = "README.md"
 
-[[tool.poetry.source]]
-name = "pytorch"
-url = "https://download.pytorch.org/whl/cu121"
-priority = "explicit"
-
 [tool.poetry.dependencies]
-python = "^3.12.1"
+python = "^3.11"
 transformers = "^4.36.2"
-pillow = "^10.1.0"
-# torch = "^2.1.2"
-
+Pillow = "^10.1.0"
+torch = "^2.1.2"
+nuscenes-devkit = "^1.1.11"
+cython = "^3.0.7"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.0.9"
 ipywidgets = "^8.1.1"
 jupyterlab-lsp = "^5.0.1"
-python-lsp-server = {extras = ["all"], version = "^1.9.0"}
+python-lsp-server = "^1.9.0"
 jupyterlab-vim = "^4.1.0"
 nbdime = "^4.0.1"
 
