--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@ services:
   app:
     build: .
     container_name: vector-objects
-    # command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload
     command: jupyter-lab --ip=0.0.0.0 --port=8889 --allow-root --no-browser -y
-    ports:
-      - 8889:8889
+    environment:
+      - PINECONE_API=${PINECONE_API}
+    network_mode: host
     volumes:
       - .:/code
-  #   depends_on:
-  #     - redis
-
-  # redis:
-  #   image: redis:alpine
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
